package BaiTapA4_VoteSingleton;

public enum Candidate {
  TRUMP,
  BIDEN
}
